Add Rappenstein article

--- a/src/app.html
+++ b/src/app.html
@@ -9,8 +9,10 @@
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="./pages/404.html">
 <link rel="import" href="icons.html">
 <link rel="import" href="menu.html">
+<link rel="import" href="report.html">
 
 <dom-module id="my-app">
   <template>
@@ -45,7 +47,7 @@
     </style>
 
     <app-location route="{{route}}"></app-location>
-    <iron-ajax id="itemsLoader" url="items.json" handle-as="json" last-response="{{items}}"></iron-ajax>
+    <iron-ajax id="itemsLoader" url="/res/items.json" handle-as="json" last-response="{{items}}"></iron-ajax>
 
     <app-drawer-layout fullbleed force-narrow align="left" id="drawerLayout">
       <app-header-layout id="headerLayout">
@@ -66,7 +68,6 @@
           <my-page-tools-kensentme name="/tools/kensentme"></my-page-tools-kensentme>
           <my-page-impressum name="/impressum"></my-page-impressum>
           <my-page-404 name="/404"></my-page-404>
-          <my-page-maptest name="/maptest"></my-page-maptest>
           <my-page-photos name="/photos"></my-page-photos>
           <my-page-alpine-flumserberg-20161112 name="/alpine/flumserberg/20161112"></my-page-alpine-flumserberg-20161112>
           <my-page-alpine-lenzerheide-20161029 name="/alpine/lenzerheide/20161029"></my-page-alpine-lenzerheide-20161029>
@@ -186,6 +187,7 @@
           <my-page-alpine-kaunertal-20170506 name="/alpine/kaunertal/20170506"></my-page-alpine-kaunertal-20170506>
           <my-page-alpine-speer-20170603 name="/alpine/speer/20170603"></my-page-alpine-speer-20170603>
           <my-page-alpine-alpstein-20170617 name="/alpine/alpstein/20170617"></my-page-alpine-alpstein-20170617>
+          <my-report name="/alpine/malbun/20170716"></my-report>
         </iron-pages>
       </app-header-layout>
       <app-drawer>
@@ -205,6 +207,10 @@
           type: String,
           reflectToAttribute: true,
           observer: '_pageChanged'
+        },
+        selectedPageElement: {
+          type: Object,
+          observer: '_pageElementSelected'
         }
       },
 
@@ -222,11 +228,15 @@
       },
 
       _pageChanged: function(page) {
-        var resolvedPageUrl = this.resolveUrl('pages' + page + '.html');
-        this.importHref(resolvedPageUrl, this._lazyLoader.bind(this, page), this._showPage404, false);
+        if (page !== '/alpine/malbun/20170716') {
+          var resolvedPageUrl = this.resolveUrl('pages' + page + '.html');
+          this.importHref(resolvedPageUrl, this._pageLoaded.bind(this, page), this._pageLoaded.bind(this, page), false);
+        } else {
+          this._pageLoaded(page);
+        }
       },
 
-      _lazyLoader: function(page) {
+      _pageLoaded: function(page) {
         if (!this.items) {
           this.$.itemsLoader.generateRequest();
         }
@@ -234,10 +244,6 @@
         this.$.headerLayout.resetLayout();
         ga('set', 'page', page);
         ga('send', 'pageview');
-      },
-
-      _showPage404: function() {
-        this.page = '/404';
       },
 
       _changeMetatags: function(page, items) {
