--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
 
         //Don't wait for initial page loading until polymer
         var path = window.location.pathname;
-        if (path == '/') path = '/start';
-        var initialPage = document.createElement('link');
-        initialPage.id = 'import';
-        initialPage.rel = 'import';
-        initialPage.href = '/src/pages' + path + '.html';
-        document.head.appendChild(initialPage);
+        if (path !== '/alpine/malbun/20170716') {
+          if (path == '/') path = '/start';
+          var initialPage = document.createElement('link');
+          initialPage.id = 'import';
+          initialPage.rel = 'import';
+          initialPage.href = '/src/pages' + path + '.html';
+          document.head.appendChild(initialPage);
+        }
       })();
     </script>
 
